==== 1.5.0 ====
    * http response 304 Not Modified supported

==== 1.4.2 ====
    * bug fix when setting req.clength

==== 1.4.1 ====
    * append Secret Key about info to debug-info page
    * fix ini config examples - documentation can't be on same line as variable
    * fix menu links (diskusion and Facebook to PyPI)

==== 1.4.0 ====
    * fix version style to major.minor.maintenance

==== 1.0.4 ====
    * is_xhr bug fix
    * json POST|PUT|Patch request parsing
    * documentation fix
    * Request cookies and Session rewrite
    * html clear output in error traceback
    * included results have meta content tag
    * Reimplementation of Headers class (Python 3.4 support)

==== 1.0.3 ====
    * installation documentation fix
    * /debug-info handlers are separete
    * send_file result in main __init__.py

==== 1.0.2 ====
    * auto striping option keys and values
    * HTTP_FORBIDDEN bug fix (missing const)
    * Security update:
      * using sha512 in session hidden function
      * more uknown generic secret key
      * secret key is moved from debug-info html page to log where this page is
        shown
    * EmptyForm return default value

==== 1.0.1 ====
    * use pypi servers insead of sourceforge to download (doc)
    * adding viewport and desription to documentation html header
    * fix development status
    * unicode bug fix on debug-info page and with document_root
    * better rst description for pypi

==== 1.0.0 ====
    * Application class is smart singleton now (one instance for one name)
    * PoorSession have variable compressor module or object
    * Headers convert strings to ISO-8859-1 as RFC and PEP says
    * additional headers test in simple.py test
    * documentation updates and fixes

==== 0.9.8 (rc5) ====
    * automatic convert unicode to str for in header add method
    * uid, gid, euid and egid in debug-info

==== 0.9.7 (rc4) ====
    * documentation is build, install, and clean by extra commands